about page and contact page added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3793,7 +3793,7 @@ label {
 	transform: translate(-50%, -50%);
 	width: 30px;
 	height: 30px;
-	background: var(--tg-primary-color);
+	background: #2e2382;
 	border-radius: 50%;
 	z-index: -1;
 }
@@ -4154,7 +4154,7 @@ label {
 }
 .testimonial-content-two .content-top .icon {
 	font-size: 40px;
-	color: var(--tg-primary-color);
+	color: #2e2382;
 	line-height: 1;
 }
 .testimonial-content-two .content-top .rating {
@@ -4188,7 +4188,7 @@ label {
 }
 .testimonial-content-two .content-bottom span {
 	display: block;
-	color: var(--tg-primary-color);
+	color: #2e2382;
 	line-height: 1;
 }
 
@@ -4262,7 +4262,7 @@ label {
 	width: 20px;
 	height: 5px;
 	border-radius: 500px;
-	background: var(--tg-primary-color);
+	background: #2e2382;
 	opacity: 0.2;
 }
 .testimonial-active-two .slick-dots li.slick-active button {
@@ -4329,7 +4329,7 @@ label {
 	transform: rotate(0);
 }
 .faq-wrap .accordion-button:not(.collapsed) {
-	color: var(--tg-primary-color);
+	color: #2e2382;
 	background-color: var(--tg-white);
 	box-shadow: none;
 	border-bottom: 1px solid #E7E7E7;
@@ -5167,7 +5167,7 @@ label {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: var(--tg-primary-color);
+	background: #2e2382;
 	color: var(--tg-white);
 	border-radius: 50%;
 	font-size: 22px;
@@ -5646,4 +5646,162 @@ label {
 
 .my-floats{
 	margin-top:16px;
+}
+
+
+
+
+.project-six {
+  position: relative;
+  display: block;
+  padding: 0 0 15px;
+  z-index: 1;
+}
+
+.project-six .section-title__tagline::before {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.project-six .container {
+  max-width: 1176px;
+}
+
+.project-six__carousel {
+  position: relative;
+  display: block;
+}
+
+.project-six__carousel.owl-carousel .owl-stage-outer {
+  overflow: visible;
+}
+
+.project-six__single {
+  position: relative;
+  display: block;
+}
+
+.project-six__img {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.project-six__img:before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  content: "";
+  background-color: rgba(var(--austry-black-rgb), .30);
+  -webkit-transform: perspective(400px) rotateX(90deg) scaleY(0.5);
+  -ms-transform: perspective(400px) rotateX(90deg) scaleY(0.5);
+  transform: perspective(400px) rotateX(90deg) scaleY(0.5);
+  -webkit-transform-origin: center;
+  -ms-transform-origin: center;
+  transform-origin: center;
+  transition-delay: .1s;
+  transition-timing-function: ease-in-out;
+  transition-duration: .5s;
+  transition-property: all;
+  z-index: 1;
+}
+
+.project-six__single:hover .project-six__img:before {
+  -webkit-transform: perspective(400px) rotateX(0deg) scaleY(1.0);
+  -ms-transform: perspective(400px) rotateX(0deg) scaleY(1.0);
+  transform: perspective(400px) rotateX(0deg) scaleY(1.0);
+}
+
+.project-six__img img {
+  width: 100%;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  transition: all 500ms ease
+}
+
+.project-six__single:hover .project-six__img img {
+  transform: scale(1.05);
+}
+
+.project-six__content {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  right: 20px;
+  background-color: var(--austry-black);
+  padding: 60px 50px 50px;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  -webkit-transform: scale(1, 0);
+  transform: scale(1, 0);
+  -webkit-transform-origin: bottom center;
+  transform-origin: bottom center;
+  -webkit-transition: -webkit-transform 500ms ease;
+  transition: -webkit-transform 500ms ease;
+  transition: transform 500ms ease;
+  transition: transform 500ms ease, -webkit-transform 500ms ease;
+  z-index: 2;
+}
+
+.project-six__single:hover .project-six__content {
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+  transition-delay: 500ms;
+}
+
+.project-six__sub-title {
+  font-size: 14px;
+  line-height: 20px;
+  margin-bottom: 1px;
+  position: relative;
+  display: inline-block;
+}
+
+.project-six__sub-title:before {
+  content: "";
+  position: absolute;
+  top: -15px;
+  left: 0;
+  height: 2px;
+  width: 42px;
+  background-color: var(--austry-base);
+}
+
+.project-six__title {
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 30px;
+}
+
+.project-six__title a {
+  color: var(--austry-white);
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.project-six__title a:hover {
+  color: var(--austry-base);
+}
+
+
+
+.project-page-one {
+  position: relative;
+  display: block;
+  padding: 120px 0 90px;
+}
+
+.project-page-one .project-six__single {
+  margin-bottom: 30px;
+}
+
+.project-page-one .project-six__sub-title:before {
+  background-color: #ffaa17;
+}
+
+.project-page-one .project-six__title a:hover {
+  color: #ffaa17;
 }
