product page completed

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -311,7 +311,7 @@
 	padding-top: 110px;
 }
 .pt-115 {
-	padding-top: 115px;
+	padding-top: 50px;
 }
 .pt-120 {
 	padding-top: 120px;
@@ -417,9 +417,9 @@
 .pb-85 {
 	padding-bottom: 85px;
 }
-.pb-90 {
+/* .pb-90 {
 	padding-bottom: 90px;
-}
+} */
 .pb-95 {
 	padding-bottom: 95px;
 }
